# TestTask

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
TestTask/: settings.py  urls.py
article/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
article/migrations/: 0001_initial.py
templates/: comments.html
